add local dependencies. Update bower.json

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="../src/d3-timeline.js"></script>
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/d3/d3.js" charset="utf-8"></script>
+<script src="bower_components/d3-timeline/src/d3-timeline.js"></script>
 
 <script type="text/javascript">
 window.onload = function() {
