--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 window.onload = function() {
 
 var labelTestData = [
-{label: "FOX", times: [{"starting_time": 1355752800000, "ending_time": 1355759900000}, {"starting_time": 1355767900000, "ending_time": 1355774400000}]},
-{label: "MSNBC", times: [{"starting_time": 1355752800000, "ending_time": 1355759900000}, {"starting_time": 1355759910000, "ending_time": 1355761900000}, ]},
-{label: "VOX", times: [{"starting_time": 1355761910000, "ending_time": 1355763910000}]},
+{label: "FOX", times: [{"starting_time": 1355752800000, "ending_time": 1355759900000, "thumb": "Bowser.gif"}, {"starting_time": 1355767900000, "ending_time": 1355774400000, "thumb": "Bowser.gif"}]},
+{label: "MSNBC", times: [{"starting_time": 1355752800000, "ending_time": 1355759900000, "thumb": "Bowser.gif"}, {"starting_time": 1355759910000, "ending_time": 1355761900000, "thumb": "Bowser.gif"}, ]},
+{label: "VOX", times: [{"starting_time": 1355761910000, "ending_time": 1355763910000, "thumb": "Bowser.gif"}]},
 ];
 
 var labelColorTestData = [
