--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/d3/d3.js" charset="utf-8"></script>
-<script src="bower_components/d3-timeline/src/d3-timeline.js"></script>
+<script src="src/d3-timeline.js"></script>
 
 <script type="text/javascript">
 window.onload = function() {
