added link to style

--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!doctype html>
 <html>
-<head>
-<script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/d3/d3.js" charset="utf-8"></script>
-<script src="src/d3-timeline.js"></script>
 
-<script type="text/javascript" src="js/script.js"></script>
+<head>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
 
@@ -18,6 +15,12 @@
             <div id="scrolled_date"></div>
         </div>
     </div>
+
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/d3/d3.js" charset="utf-8"></script>
+    <script src="src/d3-timeline.js"></script>
+
+    <script type="text/javascript" src="js/script.js"></script>
 
 </body>
 
