basic video player functionality

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <div style="width:100%;text-align:center;">
+        <iframe id="vid-frame" width="600" height="400" src="" frameborder="0" allowfullscreen></iframe>
+    </div>
 
     <div>
-        <h3>A stacked timeline with hover, click, and scroll events</h3>
+
         <div id="timeline3"></div>
         <div id="hoverRes">
             <div class="coloredDiv"></div>
