removed scroll from timeline so that the page scrolls

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div style="width:100%;text-align:center;">
+    <div class="top-half">
         <iframe id="vid-frame" width="600" height="400" src="" frameborder="0" allowfullscreen></iframe>
     </div>
 
-    <div>
+    <div style="margin: 0 15px;">
 
         <div id="timeline3"></div>
         <div id="hoverRes">
