--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link href="style.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,800' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div class="top-half">
